# mediaPlayer_QT

./: CMakeLists.txt  readme.md
history/: history.json
include/: audioPlayer.h  converterJSON.h  mainWindow.h
src/: CMakeLists.txt  audioPlayer.cpp  converterJSON.cpp  mainWindow.cpp  mainwindow.ui
